# ChangeLog for dev-libs/opensc
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/ChangeLog,v 1.13 2005/01/26 00:45:36 dragonheart Exp $

  26 Jan 2005; Daniel Black <dragonheart@gentoo.org> :
  fixed src_uri as per bug #79510. Thanks Alexander Jenisch <nt-@gmx.de>. Note
  still working on library issues

  24 Jan 2005; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  opensc-0.9.4.ebuild:
  Restored keywords. Added metadata with crypto herd as maintainers.
  Specified plugin direcory to remove a /no directory and to provide
  mozilla support.

  23 Jan 2005; Markus Rothe <corsair@gentoo.org> opensc-0.8.1-r1.ebuild,
  opensc-0.9.4.ebuild:
  Added ~ppc64 to KEYWORDS

*opensc-0.9.4 (02 Nov 2004)

  02 Nov 2004; Mike Frysinger <vapier@gentoo.org> +opensc-0.9.4.ebuild:
  Version bump #69702.

*opensc-0.8.1-r1 (13 Oct 2004)

  13 Oct 2004; Mike Frysinger <vapier@gentoo.org> +files/0.8.1-64bit.patch,
  +opensc-0.8.1-r1.ebuild, -opensc-0.8.1.ebuild, opensc-0.9.2.ebuild:
  Version bump to fix 64bit problems.  Patch by Andreas Steffen.

*opensc-0.9.2 (31 Aug 2004)

  31 Aug 2004; Mike Frysinger <vapier@gentoo.org> -opensc-0.9.0_alpha.ebuild,
  +opensc-0.9.2.ebuild:
  Version bump #62359 by Andreas Jellinghaus.

  17 Jul 2004; David Holm <dholm@gentoo.org> opensc-0.8.1.ebuild,
  opensc-0.9.0_alpha.ebuild:
  Added to ~ppc.

  14 Jul 2004; Mike Frysinger <vapier@gentoo.org> opensc-0.8.1.ebuild,
  opensc-0.9.0_alpha.ebuild:
  If X is not installed then dont build the netscape plugin #56086 by Wolfram
  Schlich.

*opensc-0.9.0_alpha (13 Jul 2004)

  13 Jul 2004; Mike Frysinger <vapier@gentoo.org> +opensc-0.9.0_alpha.ebuild:
  Add an alpha version -* for Lars T. Mikkelsen #55828.

  20 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> opensc-0.8.1.ebuild:
  stop using deprecated ?: use syntax

*opensc-0.8.1 (22 Feb 2004)

  12 Mar 2004; Mike Frysinger <vapier@gentoo.org> :