@@ -1,6 +1,6 @@
-MD5 4f6857549d6621445060a8b4e1670632 ChangeLog 2175
+MD5 6ac9b98069d39b068d7ed312055e4d26 ChangeLog 2290
 MD5 245fac3c3934862cd02db52d06f8bb71 opensc-0.8.1-r1.ebuild 1293
-MD5 95dd0ebbac34b185a1ce9d2016355c49 opensc-0.9.4.ebuild 1384
+MD5 f72ec8dadc5332a6d6b9c962a8a4e6a2 opensc-0.9.4.ebuild 1498
 MD5 286a92520aa59a11916aacd680088270 metadata.xml 663
 MD5 074aae91efbecf981a1e8ed73d5d1681 files/0.8.1-64bit.patch 577
 MD5 4fcfcb66c332083c66d4758cd414fc48 files/digest-opensc-0.9.4 65
