@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/opensc
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/ChangeLog,v 1.13 2005/01/26 00:45:36 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/ChangeLog,v 1.14 2005/01/31 03:33:36 vapier Exp $
+
+  30 Jan 2005; Mike Frysinger <vapier@gentoo.org> opensc-0.9.4.ebuild:
+  Add reverse deps patch to fix relinking bugs.
 
   26 Jan 2005; Daniel Black <dragonheart@gentoo.org> :
   fixed src_uri as per bug #79510. Thanks Alexander Jenisch <nt-@gmx.de>. Note
